# zip-http-server

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  publish.Dockerfile
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/: main.rs  socket_address.rs  socket_address_macro.rs
