[package]
name = "zip-http-server"
version = "0.2.1-SNAPSHOT"
edition = "2018"

authors = [
    "anatawa12",
]
description = "The http server exports contents in zip file."
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["http", "zip"]
categories = ["web-programming::http-server"]
include = [
    "README.md",
    "src/**",
    "LICENSE-*",
    "Cargo*",
]

[dependencies]
clap = "3.0.11"
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
log = "0.4"
mime_guess = "2"
simple_logger = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal"] }
zip = "0.5"
futures-channel = "0.3.17"
futures-util = "0.3.17"
atomic-take = "1"

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.8"
