[package]
name = "zip-http-server"
version = "0.2.2-SNAPSHOT"
edition = "2018"

authors = [
    "anatawa12",
]
description = "The http server exports contents in zip file."
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["http", "zip"]
categories = ["web-programming::http-server"]
include = [
    "README.md",
    "src/**",
    "LICENSE-*",
    "Cargo*",
]

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
log = "0.4"
mime_guess = "2"
simple_logger = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal"] }
zip = "0.5"
futures-channel = "0.3.19"
futures-util = "0.3.19"
atomic-take = "1"

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.8"
